fixed scrollbar issues

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -560,17 +560,33 @@ main {
   }
 }
 
+.actualScrollBttns {
+  display: block;
+}
+
+.decoyScrollBttns {
+  display: none;
+}
+
 .scrollBttns {
   border: 1px solid #E7B85A;
   border-radius: 10px 10px 0 0;
   background-color: #0b2d39;
 } 
 
-.scrollBttns:first-of-type {
+.scrollBttns:nth-of-type(1) {
   border-bottom: none;
 }
 
-.scrollBttns:last-of-type {
+.scrollBttns:nth-of-type(2) {
+  transform: rotateX(180deg);
+}
+
+.scrollBttns:nth-of-type(3) {
+  border-bottom: none;
+}
+
+.scrollBttns:nth-of-type(4) {
   transform: rotateX(180deg);
 }
 
@@ -663,6 +679,13 @@ main {
   justify-content: end;
 }
 
+
+.scrollDetails {
+  overflow-y: scroll;
+  scrollbar-width: none;
+  height: calc(100% + 35px); /* related to the 'close' button's height */
+}
+
 .selectedLogo {
   display: flex;
   justify-content: center;
@@ -680,7 +703,7 @@ main {
   display: none;
   background-color: rgba(11, 45, 57, 0.9);
   height: 72vh;
-  overflow-y: scroll;
+  overflow-y: hidden;
 }
 
 @media (min-width:700px) {
@@ -736,7 +759,7 @@ main {
 .aboutMeList {
   margin-bottom: 18vh;
   border-radius: 15px;
-  padding: 3vw 0 3vw 3vw;
+  padding: 3vw;
   background-color: rgba(11, 45, 57, 0.7);
 }
 
